objects/Related_Case__c.object
<CustomObject>
    <fields>
        <fullName>Bug__c</fullName>
        <label>Bug</label>
        <referenceTo>SFDC_Bug__c</referenceTo>
        <relationshipLabel>Related Cases</relationshipLabel>
        <relationshipName>Related_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Details__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Cases</relationshipLabel>
        <relationshipName>Related_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Related Case</label>
    <nameField>
        <displayFormat>RC-{000}</displayFormat>
        <label>Related Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>